version/0.18/_sources/examples/legacy_standalone/03_rename_nets_and_ports.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\legacy_standalone\03_rename_nets_and_ports.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_legacy_standalone_03_rename_nets_and_ports.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_legacy_standalone_03_rename_nets_and_ports.py:


EDB: Rename nets and ports
-------------------
This example shows how you can use PyEDB to rename ports and nets.

.. GENERATED FROM PYTHON SOURCE LINES 30-33

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports, which includes importing a section.

.. GENERATED FROM PYTHON SOURCE LINES 33-38

.. code-block:: Python


    from pyedb import Edb
    from pyedb.generic.general_methods import generate_unique_folder_name
    import pyedb.misc.downloads as downloads








.. GENERATED FROM PYTHON SOURCE LINES 39-42

Download ANSYS EDB
~~~~~~~~~~~~~~~~~~
Download ANSYS generic design from public repository.

.. GENERATED FROM PYTHON SOURCE LINES 42-48

.. code-block:: Python



    temp_folder = generate_unique_folder_name()
    targetfile = downloads.download_file("edb/ANSYS-HSD_V1.aedb", destination=temp_folder)









.. GENERATED FROM PYTHON SOURCE LINES 49-52

opening EDB
~~~~~~~~~~~
Opening EDB with ANSYS release 2024.1

.. GENERATED FROM PYTHON SOURCE LINES 52-54

.. code-block:: Python

    edbapp = Edb(edbpath=targetfile, edbversion="2024.1")



.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "C:\actions-runner\_work\pyedb\pyedb\examples\legacy_standalone\03_rename_nets_and_ports.py", line 52, in <module>
        edbapp = Edb(edbpath=targetfile, edbversion="2024.1")
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\generic\design_types.py", line 108, in Edb
        from pyedb.dotnet.edb import Edb as app
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\dotnet\edb.py", line 115, in <module>
        from pyedb.workflow import Workflow
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\workflow.py", line 4, in <module>
        import pandas as pd
    ModuleNotFoundError: No module named 'pandas'




.. GENERATED FROM PYTHON SOURCE LINES 55-58

Renaming all signal nets
~~~~~~~~~~~~~~~~~~~~~~~~
Using the net name setter to rename.

.. GENERATED FROM PYTHON SOURCE LINES 58-61

.. code-block:: Python

    for net_name, net in edbapp.nets.signal.items():
        net.name = f"{net_name}_test"


.. GENERATED FROM PYTHON SOURCE LINES 62-66

Creating coaxial port on component U1 and all ddr4_dqs nets
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Selecting all nets from ddr4_dqs and component U1 and create coaxial ports
On corresponding pins.

.. GENERATED FROM PYTHON SOURCE LINES 66-72

.. code-block:: Python


    comp_u1 = edbapp.components.instances["U1"]
    signal_nets = [net for net in comp_u1.nets if "ddr4_dqs" in net.lower()]
    edbapp.hfss.create_coax_port_on_component("U1", net_list=signal_nets)
    edbapp.components.set_solder_ball(component="U1", sball_diam="0.3mm", sball_height="0.3mm")


.. GENERATED FROM PYTHON SOURCE LINES 73-76

Renaming all ports
~~~~~~~~~~~~~~~~~~
Renaming all port with _renamed string as suffix example.

.. GENERATED FROM PYTHON SOURCE LINES 76-81

.. code-block:: Python


    for port_name, port in edbapp.ports.items():
        port.name = f"{port_name}_renamed"



.. GENERATED FROM PYTHON SOURCE LINES 82-85

Saving and closing EDB
~~~~~~~~~~~~~~~~~~~~~~
Once the EDB saved and closed, this can be imported in ANSYS AEDT as an HFSS 3D Layout project.

.. GENERATED FROM PYTHON SOURCE LINES 85-89

.. code-block:: Python



    edbapp.save()
    edbapp.close()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.422 seconds)


.. _sphx_glr_download_examples_legacy_standalone_03_rename_nets_and_ports.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 03_rename_nets_and_ports.ipynb <03_rename_nets_and_ports.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 03_rename_nets_and_ports.py <03_rename_nets_and_ports.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
